--- a/Class1/Assembly-CSharp.csproj
+++ b/Class1/Assembly-CSharp.csproj
@@ -63,8 +63,11 @@
   <ItemGroup>
     <Compile Include="Assets\cube_rotate.cs" />
     <Compile Include="Assets\jump.cs" />
+    <Compile Include="Assets\name.cs" />
+    <Compile Include="Assets\name2.cs" />
     <Compile Include="Assets\rotate.cs" />
     <Compile Include="Assets\scale.cs" />
+    <Compile Include="Assets\toggle1.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>C:/Users/구건모/Desktop/개발/GameInterface/Class1/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
