기말과제 완성?

--- a/Final_test/Assembly-CSharp.csproj
+++ b/Final_test/Assembly-CSharp.csproj
@@ -66,15 +66,19 @@
     <Compile Include="Assets\_Completed-Assets\Scripts\UI\UIDirectionControl.cs" />
     <Compile Include="Assets\Making\CameraControl.cs" />
     <Compile Include="Assets\Making\Enemy.cs" />
-    <Compile Include="Assets\Making\happy.cs" />
     <Compile Include="Assets\Making\interface\appear.cs" />
     <Compile Include="Assets\Making\interface\bullet_manager.cs" />
     <Compile Include="Assets\Making\interface\bullet_view.cs" />
     <Compile Include="Assets\Making\interface\camera.cs" />
+    <Compile Include="Assets\Making\interface\color.cs" />
+    <Compile Include="Assets\Making\interface\dark.cs" />
+    <Compile Include="Assets\Making\interface\fuck.cs" />
+    <Compile Include="Assets\Making\interface\happy.cs" />
     <Compile Include="Assets\Making\interface\health.cs" />
     <Compile Include="Assets\Making\interface\icon_move.cs" />
     <Compile Include="Assets\Making\interface\life.cs" />
     <Compile Include="Assets\Making\interface\scene_system.cs" />
+    <Compile Include="Assets\Making\interface\sound.cs" />
     <Compile Include="Assets\Making\interface\tank_move.cs" />
     <Compile Include="Assets\Making\Look.cs" />
     <Compile Include="Assets\Making\Spawn.cs" />
